Updated pom.xml and application.properties